--- a/kep.yaml
+++ b/kep.yaml
@@ -1,4 +1,4 @@
-title: Sakkara - Hierarchical Cluster Topology Group Scheduler Plugin
+title: Sakkara - A Hierarchical Cluster Topology Group Scheduler Plugin
 kep-number: 4986
 authors:
   - "@tantawi"
